<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="32dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_app_bar_height">

        <RadioButton
            android:id="@+id/tab_1"
            style="@style/bottom_radio"
            android:drawableTop="@drawable/tab_1_selector"
            android:text="@string/string_tab_home" />

        <RadioButton
            android:id="@+id/tab_2"
            style="@style/bottom_radio"
            android:drawableTop="@drawable/tab_2_selector"
            android:text="@string/string_tab_gallary" />

        <RadioButton
            android:id="@+id/tab_3"
            style="@style/bottom_radio"
            android:drawableTop="@drawable/tab_3_selector"
            android:text="@string/string_tab_chart" />

        <RadioButton
            android:id="@+id/tab_4"
            style="@style/bottom_radio"
            android:drawableTop="@drawable/tab_4_selector"
            android:text="@string/string_tab_news" />

    </LinearLayout>

</android.support.v7.widget.CardView>