<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/title"
            style="@style/ContentText"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/ContentText"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/caption_text_size" />

        <TextView
            android:id="@+id/paragraph1"
            style="@style/ContentText"
            android:text="@string/paragraph1"
            android:textColor="@color/black"
            android:textSize="@dimen/paragragh_text_size" />

        <com.google.vr.sdk.widgets.pano.VrPanoramaView
            android:id="@+id/pano_view"
            android:layout_width="match_parent"
            android:layout_height="250dip"
            android:layout_margin="5dip"
            android:scrollbars="@null" />

        <TextView
            android:id="@+id/pano_view_caption"
            style="@style/ContentText"
            android:text="@string/image_caption"
            android:textColor="@color/white"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/paragraph2"
            style="@style/ContentText"
            android:text="@string/paragraph2"
            android:textColor="@color/black"
            android:textSize="@dimen/paragragh_text_size" />

        <TextView
            android:id="@+id/source"
            style="@style/ContentText"
            android:textColor="@color/black"
            android:textSize="@dimen/paragragh_text_size" />
    </LinearLayout>
</ScrollView>
