<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:foreground="?selectableItemBackgroundBorderless"
            android:id="@+id/icon_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edit_text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:hint="@string/input_number"
            android:maxLines="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_color_1"
            android:textColorHint="#B8B8B8"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/dividing_line" />

        <EditText
            android:id="@+id/edit_text_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text=""
            android:textColor="@color/text_color_1"
            android:textColorHint="#B8B8B8"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/dividing_line" />

        <TextView
            android:id="@+id/btn_login_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_btn_pressed_bg"
            android:gravity="center"
            android:text="@string/loin"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/register"
                style="@style/text_14_color_main_blue_style"
                android:layout_gravity="center_vertical"
                android:background="?android:selectableItemBackground"
                android:padding="3dp"
                android:text="@string/register" />

            <TextView
                android:id="@+id/forget_pwd"
                style="@style/text_14_color_main_blue_style"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackground"
                android:padding="3dp"
                android:text="@string/forget" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>
