<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/day_night_normal_solid_round_8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/upgrade_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:text="@string/update_version"
        android:textColor="@color/text_color_1"
        android:textSize="17dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="21dp">

        <ProgressBar
            android:id="@+id/my_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar" />

        <TextView
            android:id="@+id/tv_progres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="0%"
            android:textColor="@color/main_blue"
            android:textSize="14dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="@color/dividing_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="20dp"
            android:text="@string/re_download"
            android:textColor="@drawable/progress_bg"
            android:textSize="17dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/dividing_line" />

        <TextView
            android:id="@+id/btn_download_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="20dp"
            android:text="@string/re_download_cancel"
            android:textColor="@drawable/progress_bg"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>
