<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/privacy_notice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:text="@string/privacy_notice"
                    android:textColor="@color/text_color_1"
                    android:textSize="17dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/common_icon_more" />

            </RelativeLayout>

            <View style="@style/divider_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/clean_cache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:text="@string/clean_cache"
                    android:textColor="@color/text_color_1"
                    android:textSize="17dp" />

                <ImageView
                    android:id="@+id/cache_size_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/common_icon_more" />

                <TextView
                    android:id="@+id/cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/cache_size_arrow"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/text_color_3"
                    android:textSize="15dp" />
            </RelativeLayout>

            <View style="@style/divider_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/current_version"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:text="@string/current_version"
                    android:textColor="@color/text_color_1"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/text_color_3"
                    android:textSize="15dp" />
            </RelativeLayout>

            <View style="@style/divider_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/login_btn_pressed_bg"
            android:gravity="center"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/login_out"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adsense_app_ad_banner_settings" />

            <FrameLayout
                android:id="@+id/ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>